# AID

./: .cirrus.yml  .deepsource.toml  .env  .gitignore  .goreleaser.yaml  .goreleaser.yml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE-996-Forbidden  Makefile  Pipfile  Procfile  README.md  SECURITY.md  appveyor.yml  azure-pipelines.yml  before_build.sh  goreleaser.yaml  netlify.toml  package-lock.json  package.json  requirements.txt  setup.py  snapcraft.yaml
.ci/: build.sh
.github/: FUNDING.yml  dependabot.yml
.semaphore/: semaphore.yml
.trunk/: trunk.yaml
assets/: logo-with-slogan-landscape.xcf  logo-with-slogan.xcf
cli/: .gitignore  Gopkg.toml  build.sh  config.go  contrib.go  daemon.go  environment.go  go.mod  go.sum  goreleaser.yaml  handler.go  inspector.go  main.go  process.go  query.go  raven.go  repository.go  service.go  session.go  shell.go  system.go  template.go  user.go  utils.go  virtual.go  webui.go
components/: Makefile
components/mlserve/: .gitignore  Makefile  pyproject.toml  requirements.txt  runner_example.py  setup.py
components/mlserve/aid/: app.py  envs.py  handler.py  logger.py  server.py  solver.py  traceableThread.py
components/mlserve/mlpm/: __init__.py  app.py  batch.py  client.py  config.py  envs.py  grpc.py  handler.py  logger.py  metrics.py  response.py  schemas.py  server.py  solver.py  traceableThread.py  utility.py
components/mlserve/mlpm/dataset/: images.py
components/mlserve/mlpm/infosite/: index.html
components/mlserve/mlpm/static/: swagger.html
components/mlserve/mlserve/: config.py  grpc.py  server.py  solver.py  traceableThread.py  utility.py
components/mlserve/tests/: server.py  start.sh
components/studio/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
components/studio/src-tauri/src/: main.rs
core/: .gitignore  go.mod  go.sum
cvpm/: .gitignore  Server.py  Solver.py  Utility.py  bundle.py  config.py  interface.py  logger.py  pipeline.py  pyvenv.cfg  requirements.txt  server.py  solver.py  utility.py
dashboard/: .babelrc  .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json
discovery/: .gitignore  Dockerfile  Procfile  README.md  build  package-lock.json  package.json  tsconfig.json  tslint.json  winston-logsene.d.ts
docs/: CNAME  README.md  _coverpage.md  _sidebar.md  index.html  (+8 more)
(+804 files in other folders)
