[tool.poetry]
name = "mlserve"
version = "0.1.0"
description = ""
authors = ["Xiaozhe Yao <xiaozhe.yaoi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
toml = "^0.10.1"
raven = "^6.10.0"
yapf = "^0.30.0"
isort = "^4.3.21"
autoflake = "^1.4"
werkzeug = "^1.0.1"
pillow = "^8.0.1"
numpy = "^1.19.3"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
